manifests/base/haohan/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haohan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haohan
  template:
    metadata:
      labels:
        app: haohan
    spec:
      containers:
        - name: haohan
          image: dangnam141002/haohan:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
