manifests/base/haohan/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haohan
spec:
  selector:
    app: haohan
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
