manifests/base/haohan/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haohan
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: haohan.namth.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haohan
                port:
                  number: 80
